Created some basic App styling to see how components look when presented against the background colour. Finalized the PairingRow component to MVP standard, using dummy data manually inserted.

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,1 +1,11 @@
 @import "./Global.scss";
+
+.pageStyle {
+    box-sizing: border-box;
+    height: 100vh;
+    width: 100vw;
+    background-color: $GreenBlack;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
