--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,9 +2,9 @@
 
 .pageStyle {
     box-sizing: border-box;
-    height: 100vh;
-    width: 100vw;
-    background-color: $GreenBlack;
+    height: 100%;
+    width: 100%;
+    background-color: "white";
     display: flex;
     flex-direction: column;
     align-items: center;
