--- a/src/styles/TournamentTree.scss
+++ b/src/styles/TournamentTree.scss
@@ -1,1 +1,6 @@
-@import "./Global.scss"
+@import "./Global.scss";
+
+.TournamentTree__Left {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
