Successfully styled the TournamentTree component to have a tree-like tournament bracket style using CSS grid to stagger the heights of the respective PairingRow components.

--- a/src/styles/Pairing.scss
+++ b/src/styles/Pairing.scss
@@ -18,7 +18,8 @@ td {
     border: 1px solid $GreenMid;
 }
 
-.pairing__player {        
+.pairing__player {  
+    text-align: center;      
     height: 2rem;
 }
 .pairing__name {    
