--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,9 +2,9 @@
 
 .pageStyle {
     box-sizing: border-box;
-    height: 100%;
+    height: 100vh;
     width: 100%;
-    background-color: "white";
+    background-color: $GreenBlack;
     display: flex;
     flex-direction: column;
     align-items: center;
