--- a/src/styles/TournamentTree.scss
+++ b/src/styles/TournamentTree.scss
@@ -3,4 +3,16 @@
 .TournamentTree__Left {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(10px, auto);
+    column-gap: 1rem;
+}
+
+.TournamentTree__QuarterFinals {
+    grid-row: 1 / 6;
+}
+.TournamentTree__SemiFinals {
+    grid-row: 2 / 5;
+}
+.TournamentTree__Finals {
+    grid-row: 3 / 4;
 }
