Created a Roster component which contains a table detailing user inputted players (as well as a delete button so inputted players can be removed).

--- a/src/styles/GameForm.scss
+++ b/src/styles/GameForm.scss
@@ -30,7 +30,8 @@
 }
 
 .GameForm__Button {
-    padding: 0.5rem;
+    @include button;
+    padding: 0.4rem;
     border: 1px solid $GreenMid;
     color: $GreenMid;
     background-color: $GreenBlack;
