--- a/src/styles/PairingRow.scss
+++ b/src/styles/PairingRow.scss
@@ -10,7 +10,8 @@
 .PairingRow__title {
     color: $GreenMid;
     font-family: $font;
-    font-size: 22px;
+    font-size: 17px;
+    text-align: center;
     border: 1px solid $GreenMid;
     margin: 0px;
     padding: 7px;
