Added validation to the GameForm component so that the user must create an even number of players, more than two players and less than 10 players, and player names must be more than 2 characters and less than 15.

--- a/src/styles/GameForm.scss
+++ b/src/styles/GameForm.scss
@@ -1,7 +1,7 @@
 @import "./Global.scss";
 
 .GameForm {
-    height: 8rem;
+    height: 100%;
     width: 30rem;
     display: flex;
     flex-direction: column;
@@ -36,4 +36,9 @@
     color: $GreenMid;
     background-color: $GreenBlack;
     font-family: $font;
+}
+
+.GameForm__Error {
+    margin: 16px 0 0 0;
+    color: $GreenLight;
 }
