--- a/src/styles/TournamentTree.scss
+++ b/src/styles/TournamentTree.scss
@@ -1,7 +1,24 @@
 @import "./Global.scss";
 
 .TournamentTree {
-    display: flex;    
+    display: flex;
     column-gap: 1rem;
     align-items: center;
+}
+
+.PairingRow {
+    width: 17rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+}
+
+.PairingRow__title {
+    color: $GreenMid;
+    font-family: $font;
+    font-size: 17px;
+    text-align: center;
+    border: 1px solid $GreenMid;
+    margin: 0px;
+    padding: 7px;
 }
