--- a/src/styles/MatchBox.scss
+++ b/src/styles/MatchBox.scss
@@ -34,5 +34,11 @@
 }
 
 .MatchBox__Alert {    
+    width: 35rem;
+    margin-bottom: 0;    
+}
+
+.MatchBox__Alert--Deuce {    
+    width: 10rem;
     margin-bottom: 0;    
 }
