--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,8 +2,8 @@
 
 .pageStyle {
     box-sizing: border-box;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background-color: $GreenBlack;
     display: flex;
     flex-direction: column;
