Updated validation logic on the game form to check whether total number of players is equal to a power of two. Issues remain when deleting players as well as when deleting text, as currently these do not trigger validation correctly.

--- a/src/styles/GameForm.scss
+++ b/src/styles/GameForm.scss
@@ -8,13 +8,13 @@
     padding: 2rem;
     border: 1px solid $GreenMid;
     color: $GreenMid;
-    font-family: $font;    
+    font-family: $font;
 }
 
 .GameForm__Entry {
     display: flex;
     flex-direction: column;
-    gap: .5rem;
+    gap: 0.5rem;
 }
 
 .GameForm__Label {
@@ -28,6 +28,7 @@
     background-color: $GreenBlack;
     font-family: $font;
 }
+
 
 .GameForm__Button {
     @include button;
