--- a/src/styles/TournamentTree.scss
+++ b/src/styles/TournamentTree.scss
@@ -1,6 +1,7 @@
 @import "./Global.scss";
 
 .TournamentTree {
+    margin: 2rem 0;
     display: flex;
     column-gap: 1rem;
     align-items: center;
