--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,7 +2,7 @@
 
 .pageStyle {
     box-sizing: border-box;
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     background-color: $GreenBlack;
     display: flex;
