--- a/src/styles/MatchBox.scss
+++ b/src/styles/MatchBox.scss
@@ -2,6 +2,7 @@
 
 .MatchBox__Wrapper {
     width: 35rem;
+    margin: 2rem 0;
     display: flex;
     flex-direction: column;
     padding: 1rem;
@@ -28,17 +29,24 @@
 
 .MatchBox__GameAlerts {
     display: flex;
-    justify-content: space-evenly;    
-    margin-bottom: 0;
+    justify-content: space-evenly;        
     text-align: center;
 }
 
 .MatchBox__Alert {    
-    width: 35rem;
-    margin-bottom: 0;    
+    width: 35rem;    
 }
 
 .MatchBox__Alert--Deuce {    
-    width: 10rem;
-    margin-bottom: 0;    
+    width: 10rem;    
+}
+
+.MatchBox__Button {
+    margin: 2rem;
+    @include button;
+    padding: 0.4rem;
+    border: 1px solid $GreenMid;
+    color: $GreenMid;
+    background-color: $GreenBlack;
+    font-family: $font;
 }
