--- a/src/styles/MatchBox.scss
+++ b/src/styles/MatchBox.scss
@@ -9,6 +9,11 @@
     border: 1px solid $GreenMid;
     color: $GreenMid;
     font-family: $font;
+    transition: .5s ease-in;
+}
+
+.closed {
+    height: 0;
 }
 
 .MatchBox__Header {
