--- a/src/styles/Tournaments.scss
+++ b/src/styles/Tournaments.scss
@@ -1,20 +1,25 @@
 @import "./Global.scss";
 
-.TournamentTree {
+.Tournament__Wrapper {
     margin: 2rem 0;
     display: flex;
     column-gap: 1rem;
     align-items: center;
+    color: $GreenMid;
+    font-family: $font;
 }
 
-.PairingRow {
-    width: 17rem;
+.Tournament__Info {    
     display: flex;
     flex-direction: column;
-    row-gap: 1rem;
 }
 
-.testing {
+.Round__Wrapper {
+    margin: 2rem 0;
+    display: flex;
+    flex-direction: column;
+    column-gap: 1rem;
+    align-items: center;
     color: $GreenMid;
     font-family: $font;
 }
