Resolved minor bug in GameForm where validation for minimum  players was set to < 1 when it should have been set to <= 1 (since it allowed you to start the game with only one player.

--- a/src/styles/MatrixBackground.scss
+++ b/src/styles/MatrixBackground.scss
@@ -16,7 +16,7 @@
 }
 
 .Matrix__LetterBox {
-    color: $GreenMid;
+    color: $GreenDark;
     // animation: mymove 5s linear infinite;
 }
 
@@ -24,7 +24,7 @@
     margin: 1px;
 }
 
-@keyframes mymove {
+@keyframes letterFall {
     from {
         transform: translateY(-2000px);
     }
