Finalised the falling Matrix style text background to the point I think it displays well and is most performant. It randomises on render, but does not continue to randomise (as I had originally intended), as I could not manage to implement this successfully (due to being able to restart animations with different durations each time), but also as this process would require a lot of continuous calculation for what is essentially a background.

--- a/src/styles/MatrixBackground.scss
+++ b/src/styles/MatrixBackground.scss
@@ -32,3 +32,21 @@
         transform: translateY(1000px);
     }
 }
+
+@keyframes colorChangeDark {
+    from {
+        color: $GreenDark;
+    }
+    to {
+        color: $GreenMid;
+    }
+}
+
+@keyframes colorChangeLight {
+    from {
+        color: $GreenMid;
+    }
+    to {
+        color: $GreenXL;
+    }
+}
