Fully implemented the TournamentView functionality, making use of the TournamentTree component again to display the data proved much more efficient. I have curtailed loading times from the backend by only returning the 50 most recent entries. I would like to add pagination of some kind to this component if I have time before submission, but as it stands I am satisfied with it.

--- a/src/styles/GameForm.scss
+++ b/src/styles/GameForm.scss
@@ -1,6 +1,7 @@
 @import "./Global.scss";
 
 .GameForm {    
+    background: $GreenBlack;
     margin: 2rem 0;
     width: 30rem;
     display: flex;
