--- a/src/styles/MatchBox.scss
+++ b/src/styles/MatchBox.scss
@@ -1,6 +1,7 @@
 @import "./Global.scss";
 
 .MatchBox__Wrapper {
+    background: $GreenBlack;
     width: 35rem;
     margin: 2rem 0;
     display: flex;
