--- a/src/styles/Player.scss
+++ b/src/styles/Player.scss
@@ -2,6 +2,7 @@
 
 .Player__Wrapper {
     border: 1px solid $GreenMid;
+    background: $GreenDark;
     width: 15rem;
     height: 14rem;
     color: $GreenMid;
