--- a/src/styles/Roster.scss
+++ b/src/styles/Roster.scss
@@ -2,6 +2,7 @@
 
 // wrapper styles
 .Roster__Wrapper {
+    background: $GreenBlack;
     width: 30rem;
     display: flex;
     flex-direction: column;
