--- a/src/styles/Tournaments.scss
+++ b/src/styles/Tournaments.scss
@@ -1,20 +1,9 @@
 @import "./Global.scss";
 
 .Tournament__Wrapper {
-    margin: 2rem 0;
-    display: flex;
-    column-gap: 1rem;
-    align-items: center;
-    color: $GreenMid;
-    font-family: $font;
-}
-
-.Tournament__Info {    
-    display: flex;
-    flex-direction: column;
-}
-
-.Round__Wrapper {
+    padding: 0 2rem;
+    border: 1px solid $GreenMid;
+    background: $GreenBlack;
     margin: 2rem 0;
     display: flex;
     flex-direction: column;
@@ -22,4 +11,30 @@
     align-items: center;
     color: $GreenMid;
     font-family: $font;
+    text-align: center;
+}
+
+.TournamentTree {
+    margin: 2rem 0;
+    display: flex;
+    column-gap: 1rem;
+    align-items: center;
+}
+
+.PairingRow {
+    background: $GreenBlack;
+    width: 17rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+}
+
+.PairingRow__title {
+    color: $GreenMid;
+    font-family: $font;
+    font-size: 17px;
+    text-align: center;
+    border: 1px solid $GreenMid;
+    margin: 0px;
+    padding: 7px;
 }
