Added new button animation styles for the Player components, I will go on to apply these globally for all buttons in the app.

--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -20,4 +20,5 @@ $font: "Press Start 2P", cursive;
     text-align: center;
     -webkit-appearance: none;
     -moz-appearance: none;
+    outline: none;
 }
