Implemented a separate matrix letters element to display on the victory screen. This will spell out the name of the winner eventually. For now, it maps through the winner's name when the state updates to gameConcluded and provides a MatrixLetters component for each letter, passing in the letter as a prop. I will now go on to try and implement this functionality fully.

--- a/src/styles/MatrixBackground.scss
+++ b/src/styles/MatrixBackground.scss
@@ -15,6 +15,22 @@
     display: flex;
 }
 
+.MatrixBackground--Victory {    
+    width: 60%;
+    position: fixed;
+    top: 0;
+    left: 20%;
+    right: 20%;
+    bottom: 0;
+    background: red;
+    z-index: 1;
+    font-family: $font;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .Matrix__LetterBox {
     color: $GreenDark;
     // animation: mymove 5s linear infinite;
