--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -16,8 +16,13 @@
 .Nav__Link {
     margin: 0 2rem;
     height: 1.5rem;    
-    color: $GreenMid;
+    color: $GreenMid;    
     background-color: $GreenBlack;
     font-family: $font;
+    text-decoration: none;
+}
+
+.Nav__Link:hover {        
+    color: $GreenXL;    
 }
 
