--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -5,6 +5,7 @@ $GreenMid: #22b455;
 $GreenLight: #80ce87;
 $GreenXL: #92e5a1;
 $font: "Press Start 2P", cursive;
+$breakpoint-iPhoneX: 375px;
 
 @mixin button {
     display: inline-block;
