--- a/src/styles/MatchBox.scss
+++ b/src/styles/MatchBox.scss
@@ -10,7 +10,6 @@
     border: 1px solid $GreenMid;
     color: $GreenMid;
     font-family: $font;
-    transition: 0.5s ease-in;
 }
 
 .MatchBox__Header {
@@ -44,8 +43,8 @@
 }
 
 .MatchBox__Button {
-    margin: 2rem;
     @include button;
+    margin: 2rem;
     padding: 0.4rem;
     border: 1px solid $GreenMid;
     color: $GreenMid;
@@ -53,16 +52,44 @@
     font-family: $font;
 }
 
-.MatchBox__Wrapper--Closed {
-    animation: close 3s linear 1;
-    animation-fill-mode: forwards;
-}
-
-@keyframes close {
-    from {
-        height: 0%;
+@media (max-width: $breakpoint-iPhoneX) {
+    .MatchBox__Wrapper {
+        width: 22rem;
+        margin: 2rem 0;
+        padding: 0.5rem;
     }
-    to {
-        height: 100%;
+
+    .MatchBox__Header {
+        text-align: center;
+        font-size: 0.8rem;
+        margin-top: 0;
+    }
+
+    .MatchBox__Versus {
+        font-size: 0.8rem;
+    }
+
+    .MatchBox__GameAlerts {
+        font-size: 0.8rem;
+    }
+
+    .MatchBox__Alert {
+        margin-top: 10px;
+    }
+
+    .MatchBox__Alert--Deuce {
+        margin-top: 10px;
+    }
+
+    .MatchBox__Button {
+        @include button;
+        border: 1px solid $GreenMid;
+        padding: 3px 0;
+        font-size: 0.8rem;
+        margin-top: 10px;
+        &:hover {
+            animation: buttonPress 0.2s linear 1;
+            animation-fill-mode: none;
+        }
     }
 }
