--- a/src/styles/Tournaments.scss
+++ b/src/styles/Tournaments.scss
@@ -38,3 +38,21 @@
     margin: 0px;
     padding: 7px;
 }
+
+@media (max-width: $breakpoint-iPhoneX) {
+    
+    .Tournament__Wrapper {
+        padding: 1rem 2rem;
+        border: 1px solid $GreenMid;
+        background: $GreenBlack;
+        margin: 2rem 0;
+        display: flex;
+        flex-direction: column;        
+        column-gap: 1rem;
+        align-items: center;
+        color: $GreenMid;
+        font-family: $font;
+        text-align: center;
+    }
+    
+}
